[metadata]
name = rpyc-mem
version = 0.0.1
author = Mohith Reddy
author_email = dev.m0hithreddy@gmail.com
description = 'A light weight RPyC based shared memory for Python'
long_description = file: README.md, CHANGELOG.md, AUTHORS.md
long_description_content_type = text/markdown
url = https://github.com/m0hithreddy/rpyc-mem
project_urls =
    Bug Tracker = https://github.com/m0hithreddy/rpyc-mem/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: System :: Distributed Computing

[options]
include_package_data = true
packages = find:
install_requires =
    rpyc >= 5.0.0, < 6.0.0
